refactor(user): update project with update entities