@@ -6,6 +6,7 @@ import org.springframework.beans.BeanUtils;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 import src.constant.ConfigConstant;
@@ -13,28 +14,31 @@ import src.constant.StatusConstant;
 import src.dto.request.user.*;
 import src.dto.response.admin.UserSearchRes;
 import src.dto.response.user.*;
-import src.dto.response.user.CourseDetailResponse.CourseDetailDto;
+import src.dto.response.user.DetailResponse.CourseResponseDto;
+import src.dto.response.user.DetailResponse.UserResponseDto;
 import src.entity.*;
-import src.entity.CompositeKey.StudentCourseId;
-import src.entity.CompositeKey.StudentCourseLessonId;
-import src.repository.UserCourseRepository;
-import src.repository.UserRepository;
-import src.repository.UserCourseLessonRepository;
+import src.entity.CompositeKey.*;
+import src.repository.*;
 import src.service.IUserService;
 import src.service.validator.*;
 import src.util.CourseUtils;
 import src.util.DateUtils;
+import src.util.PageableUtils;
+import src.util.UserUtils;
 
 import java.time.LocalDateTime;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
+
 
 @Service
 public class UserServiceImpl implements IUserService {
 
     private static final Logger log = LoggerFactory.getLogger(IUserService.class);
     private final UserRepository userRepository;
+    private final FullNameRepository fullNameRepository;
+    private final AddressRepository addressRepository;
     private final UserCourseRepository userCourseRepository;
     private final UserCourseLessonRepository userCourseLessonRepository;
     private final UserValidateService userValidateService;
@@ -47,6 +51,8 @@ public class UserServiceImpl implements IUserService {
     @Autowired
     public UserServiceImpl(
             UserRepository userRepository,
+            FullNameRepository fullNameRepository,
+            AddressRepository addressRepository,
             UserCourseRepository userCourseRepository,
             UserCourseLessonRepository userCourseLessonRepository,
             UserValidateService userValidateService,
@@ -58,6 +64,8 @@ public class UserServiceImpl implements IUserService {
 
     ) {
         this.userRepository = userRepository;
+        this.fullNameRepository = fullNameRepository;
+        this.addressRepository = addressRepository;
         this.userCourseRepository = userCourseRepository;
         this.userCourseLessonRepository = userCourseLessonRepository;
         this.userValidateService = userValidateService;
@@ -74,97 +82,116 @@ public class UserServiceImpl implements IUserService {
 
         userValidateService.checkRegisterUsername(req.getUsername());
 
-        Student user = new Student();
+        User user = new User();
         BeanUtils.copyProperties(req, user);
         user.setCreatedDate(LocalDateTime.now());
         user.setStatus(ConfigConstant.ACTIVE.getValue());
+        User savedUser = userRepository.save(user);
 
-        Student savedStudent = userRepository.save(user);
+        FullName fullName = new FullName();
+        BeanUtils.copyProperties(req, fullName);
+        fullName.setCreatedDate(LocalDateTime.now());
+        fullName.setStatus(ConfigConstant.ACTIVE.getValue());
+        fullName.setUser(savedUser);
+        FullName savedFullname = fullNameRepository.save(fullName);
 
-        UserResponseDto res = new UserResponseDto();
-        BeanUtils.copyProperties(savedStudent, res);
-        res.setCreatedDate(DateUtils.dateTimeToString(savedStudent.getCreatedDate()));
+        List<Address> addresses = new ArrayList<>();
+        for(AddressRequest addressRequest : req.getAddressCreateRequests()) {
+            Address address = new Address();
+            BeanUtils.copyProperties(addressRequest, address);
+            Address savedAddress = addressRepository.save(address);
+            addresses.add(savedAddress);
+        }
 
-        return res;
+        savedUser.setAddress(addresses);
+        savedUser.setFullName(savedFullname);
+        savedUser = userRepository.save(savedUser);
+
+        return UserUtils.convertToDto(savedUser);
     }
 
     @Override
     public UserResponseDto login(UserLoginReq req) {
 
-        Student user = userValidateService.validateLoginUsername(req.getUsername());
+        User user = userValidateService.validateLoginUsername(req.getUsername());
 
         requestValidateService.checkLoginPassword(user, req.getPassword());
 
-        UserResponseDto res = new UserResponseDto();
-        BeanUtils.copyProperties(user, res);
-
-        return res;
+        return UserUtils.convertToDto(user);
     }
 
     @Override
     public UserResponseDto updateUser(Long userId, UserUpdateReq req) {
 
-        Student user = userValidateService.validateUserExist(userId);
+        User user = userValidateService.validateUserExist(userId);
         requestValidateService.checkConfigStatusRequest(req.getStatus());
 
-        BeanUtils.copyProperties(req, user);
-        user.setUpdatedDate(LocalDateTime.now());
         String newStatus = (req.getStatus() == ConfigConstant.INACTIVE.getCode())
                             ? ConfigConstant.INACTIVE.getValue() : ConfigConstant.ACTIVE.getValue();
         if(!newStatus.equals(user.getStatus()))
             user.setStatus(newStatus);
 
-        Student savedStudent = userRepository.save(user);
+        FullName fullName = user.getFullName();
+        BeanUtils.copyProperties(req, fullName);
+        fullName.setStatus(newStatus);
+        fullName.setUpdatedDate(LocalDateTime.now());
+        FullName savedFullname = fullNameRepository.save(fullName);
 
-        UserResponseDto res = new UserResponseDto();
-        BeanUtils.copyProperties(savedStudent, res);
-        res.setUpdatedDate(DateUtils.dateTimeToString(savedStudent.getUpdatedDate()));
+        for(int i = 0; i < req.getAddressUpdateRequests().size(); i++) {
+            BeanUtils.copyProperties(req.getAddressUpdateRequests().get(i), user.getAddress().get(i));
+            addressRepository.save(user.getAddress().get(i));
+        }
 
-        return res;
+        BeanUtils.copyProperties(req, user);
+        user.setFullName(savedFullname);
+        user.setUpdatedDate(LocalDateTime.now());
+        User updateUser = userRepository.save(user);
+
+        return UserUtils.convertToDto(updateUser);
     }
 
     @Override
     public void deleteUser(Long userId) {
 
-        Student user = userValidateService.validateUserExist(userId);
+        User user = userValidateService.validateUserExist(userId);
         userValidateService.checkActiveUser(user);
 
         user.setStatus(ConfigConstant.INACTIVE.getValue());
+        user.getFullName().setStatus(ConfigConstant.INACTIVE.getValue());
         user.setUpdatedDate(LocalDateTime.now());
+        user.getFullName().setUpdatedDate(LocalDateTime.now());
         userRepository.save(user);
+        fullNameRepository.save(user.getFullName());
 
         log.info("Soft delete user with id: {}", userId);
     }
 
     @Override
-    public UserSearchRes getUsers(Integer page, Integer pageSize, String sort, UserSearchReq req) {
-
-        PageRequest pageRequest = PageRequest.of(page, pageSize, Sort.by(sort));
-
-        Page<Student> studentPage = userRepository.findStudents(
+    public UserSearchRes getUsers(UserSearchReq req) {
+        //
+        req.setPageIndex(req.getPageIndex() != null && req.getPageIndex() >= 0 ? req.getPageIndex() : 0);
+        req.setPageSize(req.getPageSize() != null && req.getPageSize() >= 1 ? req.getPageSize() : 10);
+        //
+        Sort sort = PageableUtils.determineSort(req.getSort());
+        Pageable pageable = PageRequest.of(req.getPageIndex(), req.getPageSize(), sort);
+        //
+        Page<User> userPage = userRepository.findStudents(
                 req.getName(),
-                req.getAge(),
                 req.getUsername(),
                 req.getStatus(),
                 req.getCreatedDateFrom(),
                 req.getCreatedDateTo(),
-                pageRequest
+                pageable
         );
-
-        List<Student> students = studentPage.getContent();
-        List<UserResponseDto> listStudentRes = students.stream().map(student -> {
-            UserResponseDto studentRes = new UserResponseDto();
-            BeanUtils.copyProperties(student, studentRes);
-            return studentRes;
-        })
-                .collect(Collectors.toList());
-
+        //
+        List<UserResponseDto> listUserRes = userPage.getContent().stream()
+                .map(UserUtils::convertToDto)
+                .toList();
+        //
         UserSearchRes res = new UserSearchRes();
-        res.setStudents(listStudentRes);
-        res.setTotalElements(studentPage.getTotalElements());
-        res.setTotalPage(studentPage.getTotalPages());
-        res.setPage(page);
-        res.setPageSize(pageSize);
+        res.setUsers(listUserRes);
+        res.setTotalItems(userPage.getTotalElements());
+
 
         return res;
     }
@@ -172,33 +199,34 @@ public class UserServiceImpl implements IUserService {
     @Override
     public UserEnrollCourseRes enrollCourse(Long userId, Long courseId) {
 
-        Student user = userValidateService.validateUserExist(userId);
+        User user = userValidateService.validateUserExist(userId);
         userValidateService.checkActiveUser(user);
         Course course = courseValidateService.validateCourseExist(courseId);
         courseValidateService.validateActiveCourse(course);
         userCourseValidateService.checkIfUserAlreadyEnrolledCourse(user, course);
 
-        StudentCourseId studentCourseId = new StudentCourseId();
-        studentCourseId.setStudentId(userId);
-        studentCourseId.setCourseId(courseId);
+        UserCourseId userCourseId = new UserCourseId(userId, courseId);
 
-        StudentCourse sc = new StudentCourse();
-        sc.setStudentCourseId(studentCourseId);
-        sc.setStudent(user);
+        UserCourse sc = new UserCourse();
+        sc.setUserCourseId(userCourseId);
+        sc.setUser(user);
         sc.setCourse(course);
         sc.setCreatedDate(LocalDateTime.now());
         sc.setStatus(StatusConstant.START.getValue());
 
-        StudentCourse savedSc = userCourseRepository.save(sc);
+        UserCourse savedSc = userCourseRepository.save(sc);
 
         for(Chapter ch : savedSc.getCourse().getChapters()) {
             for(Lesson l : ch.getLessons()) {
-                StudentCourseLesson scl = new StudentCourseLesson();
-                StudentCourseLessonId id = new StudentCourseLessonId();
-                id.setStudentCourseId(savedSc.getStudentCourseId());
-                id.setLessonId(l.getId());
+                UserCourseLesson scl = new UserCourseLesson();
+                UserCourseLessonId id = new UserCourseLessonId(
+                        savedSc.getUserCourseId().getUserId(),
+                        savedSc.getUserCourseId().getCourseId(),
+                        l.getId());
+
                 scl.setId(id);
-                scl.setStudentCourse(savedSc);
+                scl.setUser(user);
+                scl.setCourse(course);
                 scl.setLesson(l);
                 scl.setStatus(StatusConstant.START.getValue());
                 scl.setCreatedDate(LocalDateTime.now());
@@ -220,16 +248,16 @@ public class UserServiceImpl implements IUserService {
     @Override
     public UserRateCourseRes rateCourse(Long userId, Long courseId, UserRateCourseReq req) {
 
-        Student user = userValidateService.validateUserExist(userId);
+        User user = userValidateService.validateUserExist(userId);
         userValidateService.checkActiveUser(user);
         Course course = courseValidateService.validateCourseExist(courseId);
         courseValidateService.validateActiveCourse(course);
-        StudentCourse sc = userCourseValidateService.validateUserEnrolledCourse(user, course);
+        UserCourse uc = userCourseValidateService.validateUserEnrolledCourse(user, course);
 
-        sc.setRating(req.getRate());
-        sc.setUpdatedDate(LocalDateTime.now());
+        uc.setRating(req.getRate());
+        uc.setUpdatedDate(LocalDateTime.now());
 
-        StudentCourse savedSc = userCourseRepository.save(sc);
+        UserCourse savedSc = userCourseRepository.save(uc);
 
         UserRateCourseRes res = new UserRateCourseRes();
         res.setUserId(userId);
@@ -245,16 +273,16 @@ public class UserServiceImpl implements IUserService {
     @Override
     public UserReviewCourseRes reviewCourse(Long userId, Long courseId, UserReviewCourseReq req) {
 
-        Student user = userValidateService.validateUserExist(userId);
+        User user = userValidateService.validateUserExist(userId);
         userValidateService.checkActiveUser(user);
         Course course = courseValidateService.validateCourseExist(courseId);
         courseValidateService.validateActiveCourse(course);
-        StudentCourse sc = userCourseValidateService.validateUserEnrolledCourse(user, course);
+        UserCourse uc = userCourseValidateService.validateUserEnrolledCourse(user, course);
 
-        sc.setReview(req.getReview());
-        sc.setUpdatedDate(LocalDateTime.now());
+        uc.setReview(req.getReview());
+        uc.setUpdatedDate(LocalDateTime.now());
 
-        StudentCourse savedSc = userCourseRepository.save(sc);
+        UserCourse savedSc = userCourseRepository.save(uc);
 
         UserReviewCourseRes res = new UserReviewCourseRes();
         res.setUserId(userId);
@@ -262,25 +290,32 @@ public class UserServiceImpl implements IUserService {
         res.setReview(req.getReview());
         res.setUpdatedDate(DateUtils.dateTimeToString(savedSc.getUpdatedDate()));
 
+        log.info("User with id: {} has review course with id: {}", userId, courseId);
 
         return res;
     }
 
     @Override
-    public CourseDetailDto getCourseInfo(Long courseId) {
+    public CourseResponseDto getCourseInfo(Long courseId) {
 
         Course course = courseValidateService.validateCourseExist(courseId);
 
-        return CourseUtils.convertToDetailDto(course);
+        return CourseUtils.convertToDto(course);
     }
 
     @Override
-    public UserSearchCourseRes getRegisterCourse(Long userId, UserSearchCourseReq req, Integer page, Integer pageSize, String sort) {
-
-        PageRequest pageRequest = PageRequest.of(page, pageSize, Sort.by(sort));
+    public UserSearchCourseRes getRegisterCourse(UserSearchCourseReq req) {
+        //
+        userValidateService.validateUserExist(req.getUserId());
+        //
+        req.setPageIndex(req.getPageIndex() != null && req.getPageIndex() >= 0 ? req.getPageIndex() : 0);
+        req.setPageSize(req.getPageSize() != null && req.getPageSize() >= 1 ? req.getPageSize() : 10);
+        //
+        Sort sort = PageableUtils.determineSort(req.getSort());
+        Pageable pageable = PageRequest.of(req.getPageIndex(), req.getPageSize(), sort);
 
         Page<Course> coursePage = userRepository.findRegisterCourses(
-                userId,
+                req.getUserId(),
                 req.getName(),
                 req.getStatus(),
                 req.getTeacherName(),
@@ -289,34 +324,18 @@ public class UserServiceImpl implements IUserService {
                 req.getRatingFrom(),
                 req.getRatingTo(),
                 req.getNumLessons(),
-                pageRequest
+                pageable
         );
 
         List<Course> courses = coursePage.getContent();
         List<CourseRegisterSearchResponse> listCourseRegisterRes = courses.stream().map(course -> {
-            CourseRegisterSearchResponse courseRegisterRes = new CourseRegisterSearchResponse();
-            BeanUtils.copyProperties(course, courseRegisterRes);
-            for(StudentCourse sc : course.getStudentCourses()) {
-                if(Objects.equals(sc.getStudent().getId(), userId))
-                    courseRegisterRes.setRate(sc.getRating());
-            }
-            courseRegisterRes.setTeacherName(course.getTeacher().getName());
-            courseRegisterRes.setNumChapters(course.getChapters().size());
-            int numLessons = 0;
-            for(Chapter ch : course.getChapters()) {
-                numLessons += ch.getLessons().size();
-            }
-            courseRegisterRes.setNumLessons(numLessons);
-            return courseRegisterRes;
+            return CourseUtils.convertToDTO(req.getUserId(), course);
         })
-                .collect(Collectors.toList());
+                .toList();
 
         UserSearchCourseRes res = new UserSearchCourseRes();
         res.setRegisterCourses(listCourseRegisterRes);
-        res.setTotalElements(coursePage.getTotalElements());
-        res.setTotalPage(coursePage.getTotalPages());
-        res.setPage(page);
-        res.setPageSize(pageSize);
+        res.setTotalItems(coursePage.getTotalElements());
 
         return res;
     }
@@ -324,30 +343,33 @@ public class UserServiceImpl implements IUserService {
     @Override
     public UserStudyRes study(Long userId, Long courseId, Long lessonId, UserStudyReq req) {
 
-        Student user = userValidateService.validateUserExist(userId);
+        User user = userValidateService.validateUserExist(userId);
         userValidateService.checkActiveUser(user);
         Course course = courseValidateService.validateCourseExist(courseId);
         courseValidateService.validateActiveCourse(course);
-        StudentCourse sc = userCourseValidateService.validateUserEnrolledCourse(user, course);
+        UserCourse uc = userCourseValidateService.validateUserEnrolledCourse(user, course);
         Lesson lesson = lessonValidatorService.validateLessonExist(lessonId);
         lessonValidatorService.validateActiveLesson(lesson);
-        StudentCourseLesson scl = userCourseLessonValidateService.validateCourseHasLesson(sc, lesson);
+        courseValidateService.checkIfCourseHasLesson(course, lesson);
         requestValidateService.checkStatusRequest(req.getStatus());
 
-        scl.setStatus(req.getStatus());
-        scl.setUpdatedDate(LocalDateTime.now());
+        UserCourseLesson ucl = userCourseLessonValidateService.validateRecordExist(uc, lesson);
+        ucl.setStatus(req.getStatus());
+        ucl.setUpdatedDate(LocalDateTime.now());
 
-        StudentCourseLesson savedScl = userCourseLessonRepository.save(scl);
+        UserCourseLesson savedUcl = userCourseLessonRepository.save(ucl);
 
-        UserStudyRes res = new UserStudyRes();
-        res.setUserId(userId);
-        res.setCourseId(courseId);
-        res.setLessonId(lessonId);
-        res.setStatus(req.getStatus());
-        res.setUpdatedDate(DateUtils.dateTimeToString(savedScl.getUpdatedDate()));
+        if (userCourseLessonValidateService.checkIfCompleteAllLesson(savedUcl.getUserCourse())) {
+            savedUcl.getUserCourse().setStatus(StatusConstant.DONE.getValue());
+            userCourseRepository.save(ucl.getUserCourse());
+        }
+            UserStudyRes res = new UserStudyRes();
+            res.setUserId(userId);
+            res.setCourseId(courseId);
+            res.setLessonId(lessonId);
+            res.setStatus(req.getStatus());
+            res.setUpdatedDate(DateUtils.dateTimeToString(savedUcl.getUpdatedDate()));
 
-        return res;
-    }
-
-
+            return res;
+        }
 }
